@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
- Copyright 2009-2011 Brian Pellin.
+ Copyright 2009-2015 Brian Pellin.
      
  This file is part of KeePassDroid.
 
@@ -145,6 +145,7 @@
     <string name="menu_open">Otevřít</string>
     <string name="menu_rename">Přejmenovat</string>
     <string name="menu_search">Hledat</string>
+    <string name="menu_showpass">Zobrazit heslo</string>
     <string name="menu_url">Jdi na URL</string>
     <string name="minus">Mínus</string>
     <string name="never">Nikdy</string>
