@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
- Copyright 2009-2014 Brian Pellin.
+ Copyright 2009-2015 Brian Pellin.
      
  This file is part of KeePassDroid.
 
@@ -144,6 +144,7 @@
     <string name="menu_open">Åbn</string>
     <string name="menu_rename">Omdøb</string>
     <string name="menu_search">Søg</string>
+    <string name="menu_showpass">Vis adgangskode</string>
     <string name="menu_url">Gå til URL</string>
     <string name="minus">Minus</string>
     <string name="never">Aldrig</string>
