@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  Copyright 2009-2014 Brian Pellin.
+  Copyright 2009-2015 Brian Pellin.
 
   This file is part of KeePassDroid.
 
@@ -145,6 +145,7 @@
     <string name="menu_open">Öffnen</string>
     <string name="menu_rename">Umbenennen</string>
     <string name="menu_search">Suchen</string>
+    <string name="menu_showpass">Passwort anzeigen</string>
     <string name="menu_url">URL öffnen</string>
     <string name="minus">Bindestrich</string>
     <string name="never">Nie</string>
