@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
- Copyright 2009-2014 Brian Pellin.
+ Copyright 2009-2015 Brian Pellin.
      
  This file is part of KeePassDroid.
 
@@ -142,6 +142,7 @@
     <string name="menu_open">Άνοιγμα</string>
     <string name="menu_rename">Μετονομασία</string>
     <string name="menu_search">Αναζήτηση</string>
+    <string name="menu_showpass">Εμφάνιση κωδικού</string>
     <string name="menu_url">Πηγαίνετε στη διεύθυνση URL</string>
     <string name="minus">Πλην</string>
     <string name="never">Ποτέ</string>
