@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-Copyright 2009-2011 Brian Pellin.
+Copyright 2009-2015 Brian Pellin.
 This file is part of KeePassDroid.
 
 KeePassDroid is free software: you can redistribute it and/or modify
@@ -132,6 +132,7 @@ Spanish translation by José I. Paños. Updated by David García-Abad (23-09-201
     <string name="menu_open">Abrir</string>
     <string name="menu_rename">Renombar</string>
     <string name="menu_search">Buscar</string>
+    <string name="menu_showpass">Mostrar contraseña</string>
     <string name="menu_url">Ir a URL</string>
     <string name="minus">Menos</string>
     <string name="never">Nunca</string>
