@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
- Copyright 2009-2013 Brian Pellin.
+ Copyright 2009-2015 Brian Pellin.
      
  This file is part of KeePassDroid.
 
@@ -142,6 +142,7 @@
     <string name="menu_open">Avaa</string>
     <string name="menu_rename">Nimeä uudelleen</string>
     <string name="menu_search">Etsi</string>
+    <string name="menu_showpass">Näytä salasana</string>
     <string name="menu_url">Mene URL-osoitteeseen</string>
     <string name="minus">Miinus</string>
     <string name="never">Ei koskaan</string>
