@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
- Copyright 2009-2011 Brian Pellin.
+ Copyright 2009-2015 Brian Pellin.
      
  This file is part of KeePassDroid.
 
@@ -133,6 +133,7 @@
     <string name="menu_open">Apri</string>
     <string name="menu_rename">Rinomina</string>
     <string name="menu_search">Cerca</string>
+    <string name="menu_showpass">Mostra Password</string>
     <string name="menu_url">Vai all\'URL</string>
     <string name="minus">Meno</string>
     <string name="never">Mai</string>
