@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
- Copyright 2009-2014 Brian Pellin.
+ Copyright 2009-2015 Brian Pellin.
      
  This file is part of KeePassDroid.
 
@@ -137,6 +137,7 @@
   <string name="menu_open">פתח</string>
   <string name="menu_rename">שנה שם</string>
   <string name="menu_search">חפש</string>
+  <string name="menu_showpass">הצג סיסמה</string>
   <string name="menu_url">לך ל-URL</string>
   <string name="minus">מינוס</string>
   <string name="never">אף פעם</string>
