@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
- Copyright 2009-2011 Brian Pellin.
+ Copyright 2009-2015 Brian Pellin.
      
  This file is part of KeePassDroid.
 
@@ -132,6 +132,7 @@
     <string name="menu_open">Openen</string>
     <string name="menu_rename">Hernoemen</string>
     <string name="menu_search">Zoeken</string>
+    <string name="menu_showpass">Toon wachtwoord</string>
     <string name="menu_url">Ga naar URL</string>
     <string name="minus">Minus</string>
     <string name="never">Nooit</string>
