@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
- Copyright 2009-2011 Brian Pellin.
+ Copyright 2009-2015 Brian Pellin.
      
  This file is part of KeePassDroid.
 
@@ -130,6 +130,7 @@
     <string name="menu_open">Opna</string>
     <string name="menu_rename">Gje nytt namn</string>
     <string name="menu_search">Søk</string>
+    <string name="menu_showpass">Syn passordet</string>
     <string name="menu_url">Gå til adressa</string>
     <string name="minus">Minus</string>
     <string name="never">Aldri</string>
