@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
- Copyright 2009-2011 Brian Pellin.
+ Copyright 2009-2015 Brian Pellin.
      
  This file is part of KeePassDroid.
 
@@ -133,6 +133,7 @@
     <string name="menu_open">Abrir</string>
     <string name="menu_rename">Renomear</string>
     <string name="menu_search">Procurar</string>
+    <string name="menu_showpass">Mostrar senha</string>
     <string name="menu_url">Ir para URL</string>
     <string name="minus">Menos</string>
     <string name="never">Nunca</string>
