@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
- Copyright 2009-2011 Brian Pellin.
+ Copyright 2009-2015 Brian Pellin.
      
  This file is part of KeePassDroid.
 
@@ -145,6 +145,7 @@
     <string name="menu_open">Открыть</string>
     <string name="menu_rename">Новое имя</string>
     <string name="menu_search">Поиск</string>
+    <string name="menu_showpass">Показать</string>
     <string name="menu_url">Ссылка</string>
     <string name="minus">-Дефис-</string>
     <string name="never">Никогда</string>
