@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
- Copyright 2009-2011 Brian Pellin.
+ Copyright 2009-2015 Brian Pellin.
      
  This file is part of KeePassDroid.
 
@@ -130,6 +130,7 @@
     <string name="menu_open">Відкрити</string>
     <string name="menu_rename">Перейменувати</string>
     <string name="menu_search">Пошук</string>
+    <string name="menu_showpass">Показати пароль</string>
     <string name="menu_url">Перейти по посиланню</string>
     <string name="minus">Minus</string>
     <string name="never">Ніколи</string>
