@@ -1,5 +1,7 @@
  * Improve password font handling. Handle failure to load font gracefully
  * Work around device bugs with FLAG_SECURE
+ * Shorter English text for Show/hide password, so it fits on the action bar 
+     on more phones.
 
 KeePassDroid (2.0.2)
  * Fix crash on incorrect password (closes: #776)
